package wordgame;

class Feedback {
    private int correctLetters;
    private int correctPositions;

    Feedback() {}

    @Override
    public String toString() {}

    public boolean isCorrect(Word word) {}
}