package wordgame;

import java.util.ArrayList;

class Word {

    private ArrayList<Character> letters;

    Word() {}

    public Feedback compareTo(Word other) {}

    public int length() {
        return letters.size();
    }
}
